Add Open Banking API key authorization
